Fixing bug 148782. Don't let images or form controls named 'submit' shadow the method form.submit. r=caillon@returnzero.com, sr=peterv@netscape.com, a=sspitzer@netscape.com